package ex44;

import java.util.ArrayList;

public class Products
{
    //only here to pad the JSON :))
    ArrayList<Item> products;
    public Products(){
        products = new ArrayList<>();
    }
}
